--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "gulp-pug": "^3.3.0",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.6.3",
-    "gulp-tinypng": "^1.0.2"
-  }
+    "gulp-tinypng": "^1.0.2",
+    "jquery": "^3.3.1",
+    "slick-carousel": "^1.8.1"
+  },
+  "dependencies": {}
 }
