--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-sourcemaps": "^2.6.3",
     "gulp-tinypng": "^1.0.2",
     "jquery": "^3.3.1",
+    "magnific-popup": "^1.1.0",
     "slick-carousel": "^1.8.1"
   },
   "dependencies": {}
