--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gulp-tinypng": "^1.0.2",
     "jquery": "^3.3.1",
     "magnific-popup": "^1.1.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "gulp-uglifyjs": "^0.6.2"
   },
   "dependencies": {}
 }
